Added multiple HTTP methods
Added multiple HTTP methods for claritas functionality

--- a/FrontEnd/ValedictorianFE/HTML/Home.html
+++ b/FrontEnd/ValedictorianFE/HTML/Home.html
@@ -19,6 +19,9 @@
                 
                 <ul class="nav-menu" id="navMenu">
                     <li class="nav-item">
+                        <a id="LOGOUT" href="../HTML/login_reg.html" class="nav-link" target="_self">LOGOUT</a>
+                    </li>
+                    <li class="nav-item">
                         <a href="../HTML/messaging.html" class="nav-link" target="_self">Messages</a>
                     </li>
                     <li class="nav-item">
