Finalized forums functionality $ other
Finalized forum functionality, notifications and Admin reg and login

--- a/FrontEnd/ValedictorianFE/HTML/topic.html
+++ b/FrontEnd/ValedictorianFE/HTML/topic.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>r/Topic - Valedictorian</title>
+    <title>Topics</title>
     <meta name="description" content="Dynamic topic community.">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
@@ -34,7 +34,7 @@
             <div class="topic-header reveal-text">
                 <div class="topic-title">
                     <div class="topic-icon" id="topic-icon">📌</div>
-                    <span id="topic-name">r/Topic</span>
+                    <span id="topic-name">Topic</span>
                 </div>
                 <div class="topic-meta" id="topic-meta">Topic Community</div>
                 <div class="topic-description" id="topic-description">Loading...</div>
